--- a/view/index.html
+++ b/view/index.html
@@ -30,6 +30,8 @@
 
     <li><a href="/payout">Payout the funds in an existing pool to the presale addresss</a></li>
 
+    <li><a href="/refundPresale">Refund the pool after funds have already been transferred to the presale addresss</a></li>
+
     <li><a href="/transferMyTokens">Get my tokens from an existing pool</a></li>
     <li><a href="/transferAllTokens">Distribute tokens to all pool members</a></li>
 
