--- a/view/result.html
+++ b/view/result.html
@@ -24,7 +24,7 @@
     </div>
     <br>
     <div>
-        <label for="value">Value / Amount to Send:</label>
+        <label for="value">Value / Amount to Send (in eth):</label>
         <div class="divtext" id ="value" name="value" contentEditable>
             <%= value %>
         </div>
